--- a/.config
+++ b/.config
@@ -25,4 +25,6 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_hiwifi_hc5962=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
+CONFIG_PACKAGE_luci-theme-netgear=y
