--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -81,7 +81,7 @@ jobs:
 
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@main
-      if: env.SSH_ACTIONS == 'true'
+ #     if: env.SSH_ACTIONS == 'true'
 
     - name: Download package
       id: package
