--- a/.github/workflows/zj.yml
+++ b/.github/workflows/zj.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Load custom configuration
       env:
         CONFIG_FILE: '.config1'
-        DIY_P2_SH: diy.sh
+        DIY_SH: diy.sh
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
