--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -69,7 +69,10 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
-
+      
+    - name: SSH connection to Actions
+      uses: P3TERX/debugger-action@main
+      
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
