--- a/.github/workflows/zj.yml
+++ b/.github/workflows/zj.yml
@@ -60,7 +60,8 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
-
+    - name: SSH connection to Actions
+      uses: P3TERX/debugger-action@main
     - name: Load custom configuration
       env:
         CONFIG_FILE: '.config1'
